# Deformable-Modeling

./: .gitignore  LICENSE  README.md  calibration_testing.py  config.py  main.py  readme_bk0716.md  tmp
analysis/: computation_time_points.py  learn_curve_PCG.py  learn_curve_models.py  learn_curve_objects.py  plot_1d_dicretization_force.py  plot_1d_force_expand.py  plot_1d_true_force.py  plot_2d_dense_map.py  plot_2d_height_map_lamb.py  plot_2d_predict_force.py  plot_2d_true_force.py  plot_bar_learn_simulator.py
calibrated_transforms/: calibrated_camera_xform.txt
data/: README.md
experiment/: calibration_testing.py  data_collection_probing.py
future/: README.md
matlab/: GIF_generation.m  GPRLearning.m  GPRLearningTunedHyperparameters.m  RMSE.m  RMSE2.m  Untitled3.m  actual2model.m  caseStudy.m  caseStudy2.m  check_probe_data.m  correctedData.mat  data.xlsx  diluteData.m  forceModel.m  forceModel2.m  icp.m  inv2Kernel.m  invKernel.m  kernelRidgeLearning.m  kernelRidgePredict.m  knnPredict.m  knnRegressionLearning.m  learningKernelFunc.m  lineToPoint.m  linearForce.m  linearKernel.m  loadDebiasedData.m  loadandModifyData.m  loadandModifyDataFixedTrainingPoints.m  main.m  main_old.m  modifyData.m  objectFunc.m  objectFunc2.m  objectFunc3.m  originalData.mat  plotForce.m  plotting.m  pointBias.mat  (+10 more)
utils/merge_cpp_ws/: CMakeCache.txt  CMakeLists.txt  CMakeLists_shihao.txt  Makefile  MyProgram  TSDF_result.obj.mtl  TSDF_result.off  TSDF_result2.ply  TSDF_result2_converted.ply  TSDF_result3.ply  cmake_install.cmake  main (copy).cpp  main.cpp  objectScan.pcd
(+123 files in other folders)
