CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)
PROJECT( MyProgram )

IF(NOT KLAMPT_ROOT)
  MESSAGE("KLAMPT_ROOT not defined, setting to Klampt")
  SET(KLAMPT_ROOT Klampt CACHE PATH)
ENDIF( )

SET (CMAKE_MODULE_PATH "${KLAMPT_ROOT}/CMakeModules")

# COMPILER SETTINGS: we need to turn on C++11 support
INCLUDE(CompilerSettings)

FIND_PACKAGE(Klampt REQUIRED)
#defines KLAMPT_INCLUDE_DIRS, KLAMPT_DEFINITIONS, KLAMPT_LIBRARIES

#show in CMake cache (optional)
SET(KLAMPT_INCLUDE_DIRS ${KLAMPT_INCLUDE_DIRS} CACHE STRING "Klamp't include directories" FORCE)
SET(KLAMPT_DEFINITIONS ${KLAMPT_DEFINITIONS} CACHE STRING "Klamp't compiler definitions" FORCE)
SET(KLAMPT_LIBRARIES ${KLAMPT_LIBRARIES} CACHE STRING "Klamp't link libraries" FORCE)


ADD_DEFINITIONS(${KLAMPT_DEFINITIONS})
INCLUDE_DIRECTORIES(${KLAMPT_INCLUDE_DIRS})
ADD_EXECUTABLE(MyProgram main.cpp)
TARGET_LINK_LIBRARIES(MyProgram ${KLAMPT_LIBRARIES})

# Finished:
MESSAGE ("\n")
MESSAGE (STATUS "Compile everything using: make OR make MyProgram\n")
